parser/src/parser/snapshots/enderpy__parser__parser__tests__pass_stmt.snap
---
source: src/parser/parser.rs
description: pass
---
Module {
    node: Node {
        start: 0,
        end: 4,
    },
    body: [
        Pass(
            Pass {
                node: Node {
                    start: 0,
                    end: 4,
                },
            },
        ),
    ],
}
