parser/src/parser/snapshots/enderpy__parser__parser__tests__raise_statement-2.snap
---
source: src/parser/parser.rs
description: raise a
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        Raise(
            Raise {
                node: Node {
                    start: 0,
                    end: 7,
                },
                exc: Some(
                    Name(
                        Name {
                            node: Node {
                                start: 6,
                                end: 7,
                            },
                            id: "a",
                        },
                    ),
                ),
                cause: None,
            },
        ),
    ],
}
