parser/src/parser/snapshots/enderpy__parser__parser__tests__string_literal_concatnation-12.snap
---
source: src/parser/parser.rs
description: "f'a_{1}' 'b' "
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 4,
                                    end: 0,
                                },
                                value: Str(
                                    "a_",
                                ),
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 5,
                                    end: 6,
                                },
                                value: Int(
                                    "1",
                                ),
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 12,
                                },
                                value: Str(
                                    "b",
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
