parser/src/parser/snapshots/enderpy__parser__parser__tests__string_literal_concatnation-5.snap
---
source: src/parser/parser.rs
description: "b'a' 'b'"
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [],
}
