parser/src/parser/snapshots/enderpy__parser__parser__tests__string_literal_concatnation-6.snap
---
source: src/parser/parser.rs
description: "('a'\n            'b')"
---
Module {
    node: Node {
        start: 0,
        end: 21,
    },
    body: [
        ExpressionStatement(
            Constant(
                Constant {
                    node: Node {
                        start: 1,
                        end: 20,
                    },
                    value: Str(
                        "ab",
                    ),
                },
            ),
        ),
    ],
}
